# WoWsUnpack-Ultra

./: .clang-format  .gitignore  README.md
c/: Makefile  move.c  paramsunpack.c  paramsunpack.h  run.c  wowsunpack.c  wowsunpack.h  wowsunpacker.c  wowsunpacker.h
examples/rust_example/: Cargo.toml
examples/rust_example/src/: main.rs
paramsunpack/wowsunpack/: main.cs  packages.config  wowsunpack.csproj
python/wowsdirectory/: Cargo.toml  README.md  main.py  wowsdirectory.pyi
python/wowsdirectory/src/: lib.rs
rust/: .gitignore  Cargo.toml  build.rs
rust/src/: game_directory.rs  game_unpack.rs  helper.rs  main.rs  params_unpack.rs  text_unpack.rs
wowsunpack/: .gitignore  README.md  wowsunpack.sln
wowsunpack/wowsunpack/: main.cs  packages.config  wowsunpack.csproj
wowsunpack/wowsunpack/Properties/: AssemblyInfo.cs
wowsunpack_rust/: .gitignore  Cargo.toml
wowsunpacker/: Cargo.toml  build.rs  cbindgen.toml  wowsunpacker.h
wowsunpacker/src/: game_directory.rs  game_unpack.rs  lib.rs  params_unpack.rs  text_unpack.rs  types.rs  utils.rs
wowsunpacker/src/export/: c.rs  mod.rs  tools.rs
wowsunpacker/src/unpack/: directory_browser.rs  game_unpack.rs  lang_unpack.rs  mod.rs  params_unpack.rs
wowsunpacker/src/unpacker/: game_unpack.rs  lang_unpack.rs  params_unpack.rs
wowsunpacker/src/utils/: functions.rs  game.rs  mod.rs
wowsunpacker/tests/: test_mo_file_reader.rs
