[package]
name = "wowsunpacker"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9.1"
bincode = "1.3.3"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
flate2 = "1.0.24"
regex = "1.6.0"
winreg = "0.10.1"
libloading = "0.7.3"

[release.profile]
panic = "abort"
